# test_link_shortener

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: black.yml  tests.yml
src/config/: settings.py  urls.py
src/shortener/: forms.py  models.py  urls.py  utils.py  views.py
src/shortener/migrations/: 0001_initial.py
src/shortener/static/shortener/css/: shortener.css  statistics.css
src/templates/shortener/: navbar.html  statistics.html  url_shortener.html
tests/: test_forms.py  test_models.py  test_utils.py  test_views.py
